# Robotic_System_Digital_Twin

./: .gitignore  CMakeLists.txt  package.xml  ssh_key  ssh_key.pub
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: bringup.launch.py  hardware.launch.py  sim.launch.py
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: controllers.yaml  joint_limits.yaml
robot_control/launch/: control.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: display.launch.py
robot_description/urdf/: basic_robot.urdf.xacro
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/launch/: simulation.launch.py
robot_simulation/worlds/: empty.world
