<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Top-level bringup for the robot (sim and hardware)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

