<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>ros2_control configuration for the robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_controllers</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

